.provarCaches/00D5f000005vwGkEAI/objects/rstk__apiparm__c.object
<CustomObject>
    <description>apiparm__c: This object is a generic object to be used for passing parameters to global api methods. This object will not persist any data and is to be used as a data structure only.</description>
    <fields>
        <fullName>rstk__indlinesforkitcomps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Individual Lines for Kit Components</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__qty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormhid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sormhid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soshipdmdid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soshipdmdid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soshiplineid__c</fullName>
        <label>Shipper Line ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soshipsrlnos__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>soshipsrlnos</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__useproductdefaults__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Product Defaults</label>
        <type>Checkbox</type>
    </fields>
    <label>ZZ_apiparm</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZ_apiparms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>